--- a/httpecho/Dockerfile
+++ b/httpecho/Dockerfile
@@ -1,5 +1,6 @@
 # rhcarvalho/httpecho
-FROM busybox
+FROM gliderlabs/alpine
+RUN apk-install curl
 COPY httpecho /
 EXPOSE 8080
 ENTRYPOINT ["/httpecho"]
